Change bootstrap version, include custom css, add a footer, and create an HTML form on the upload page

--- a/api/templates/about.html
+++ b/api/templates/about.html
@@ -3,5 +3,6 @@
 {% block current %}(current){% endblock %}
 {% block content %}
 <h1 class="mt-5">About</h1>
-<p class="lead">Made by Thomas Husken</p>
+<p>This is a simple webapp that can be altered into an api for a data science application.
+</p>
 {% endblock %}
