--- a/api/templates/upload.html
+++ b/api/templates/upload.html
@@ -2,6 +2,16 @@
 {% block title %}Upload{% endblock %}
 {% block current %}(current){% endblock %}
 {% block content %}
-
-<p class="mt-5">TODO: add upload functionality</p>
+    <h1 class="mt-5">Upload</h1>
+      <p class="lead">Upload your file here</p>
+      <form method="POST" enctype="multipart/form-data">
+        <input type="file" name="data" id="data" />
+        <input type="submit" value="Submit" />
+      </form>
+    <h1 class="mt-3">Results</h1>
+    {% if result %}
+          <p>show result</p>
+    {% else %}
+          <p>After you upload a file, your results will be shown here.</p>
+    {% endif %}
 {% endblock %}
