Update about section and base lay-out

--- a/api/templates/about.html
+++ b/api/templates/about.html
@@ -3,6 +3,7 @@
 {% block current %}(current){% endblock %}
 {% block content %}
 <h1 class="mt-5">About</h1>
-<p>This is a simple webapp that can be altered into an api for a data science application.
+<p class="lead">This webapp is a simple image classifier using the Inception network. It allows you to upload an image and return the top 5 predictions for this image.
+    The network is implemented in PyTorch, and served with Flask.
 </p>
 {% endblock %}
