--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -10,13 +10,13 @@
     <!-- Custom styles for this template -->
     <link href="/static/style.css" rel="stylesheet">
 
-    <title>Generic API</title>
+    <title>Image Classifier</title>
   </head>
   <body>
     <header>
         {% block navbar %}
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <a class="navbar-brand" href="#">Generic API</a>
+          <a class="navbar-brand" href="#">Image Classifier</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -43,7 +43,7 @@
 
     <footer class="footer">
         <div class="container">
-          <span class="text-muted">Footer specifying creator's information</a>.</span>
+          <span class="text-muted">Made with ❤ by Thomas Husken</a>.</span>
         </div>
     </footer>
 
