--- a/api/templates/upload.html
+++ b/api/templates/upload.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% block title %}Upload{% endblock %}
 {% block current %}(current){% endblock %}
 {% block content %}
@@ -11,13 +12,23 @@
     <h1 class="mt-3">Results</h1>
     {% if prediction %}
         <h2 class="mt-3">Image</h2>
-        <img src="data:image/png;base64,{{return_image|safe}}", height="400", width="400">
-
-<!--        <p>{{ return_image }}</p>-->
+        <img src="data:image/png;base64,{{return_image|safe}}", height="400">
         <h2 class="mt-3">Prediction</h2>
-        <p>{{ prediction }}</p>
+        <p><div id="prediction_chart" width="300"></div></p>
     {% else %}
     <p>After you upload a file, your results will be shown here.</p>
     {% endif %}
+    <script>
+             var prediction_chart = c3.generate({
+                    bindto: "#prediction_chart",
+                    data: {json: JSON.parse({{ prediction|tojson|safe }}), type: 'bar'},
+                    bar: {width: {ratio: 0.5}},
+                    axis: {
+                        x: {
+                            type:'category'
+                        }
+                    },
+                });
+    </script>
 {% endblock %}
 
