Change output from c3.js to chartist and update home page

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -3,5 +3,5 @@
 {% block current %}(current){% endblock %}
 {% block content %}
   <h1 class="mt-5">Home</h1>
-  <p class="lead">This is a generic API that serves as a starting point for future applications</p>
+  <p class="lead">Welcome to this image classifier! Proceed to the upload page to classify an image, happy classifying!</p>
 {% endblock %}
